tools/xtarget-fuzz/findings-archive-0720/NativeBuildFailure__native_build_failed_after_check_accepted/native.out
exit_code = Some(1)
timed_out = false

--- stdout ---

--- stderr ---
Compile error:
codegen produced invalid Rust — this is an Almide bug.
Please file a minimal repro at https://github.com/almide/almide/issues

--- rustc output (edited to hide generated paths) ---
warning: unused macro definition: `almide_ne`
  --> <generated.rs>:13:14
   |
13 | macro_rules! almide_ne { ($a:expr, $b:expr) => { ($a) != ($b) }; }
   |              ^^^^^^^^^
   |
   = note: `#[warn(unused_macros)]` (part of `#[warn(unused)]`) on by default

warning: unused macro definition: `almide_div`
  --> <generated.rs>:14:14
   |
14 | macro_rules! almide_div { ($a:expr, $b:expr) => {{ let (__a, __b) = ($a, $b); match __a.checked_div(__b) { Some(__v) => __v, None =>...
   |              ^^^^^^^^^^

warning: unused macro definition: `almide_mod`
  --> <generated.rs>:15:14
   |
15 | macro_rules! almide_mod { ($a:expr, $b:expr) => {{ let (__a, __b) = ($a, $b); match __a.checked_rem(__b) { Some(__v) => __v, None =>...
   |              ^^^^^^^^^^

warning: unused macro definition: `almide_index`
  --> <generated.rs>:16:14
   |
16 | macro_rules! almide_index { ($xs:expr, $i:expr) => {{ let (__xs, __i) = (&$xs, $i as i64); if __i < 0 || (__i as u64) >= __xs.len() ...
   |              ^^^^^^^^^^^^

warning: unused macro definition: `almide_index_set`
  --> <generated.rs>:17:14
   |
17 | macro_rules! almide_index_set { ($xs:expr, $i:expr, $v:expr) => {{ let __i = $i as i64; if __i < 0 || (__i as u64) >= $xs.len() as u...
   |              ^^^^^^^^^^^^^^^^

error[E0505]: cannot move out of `acc0` because it is borrowed
    --> <generated.rs>:3440:48
     |
3438 |     let acc0: AlmideMap<String, bool> = AlmideMap::<String, bool>::new();
     |         ---- binding `acc0` declared here
3439 |     let r8: (i64, i64) = almide_rt_list_fold(almide_rt_list_fold(vec![almide_rt_map_get_or(&almide_rt_map_fold(&acc0, acc0.clone(), {
     |                                                                                             ------------------ ----- borrow of `acc0` occurs here
     |                                                                                             |
     |                                                                                             borrow later used by call
3440 |         let __cap_0: AlmideMap<String, bool> = acc0;
     |                                                ^^^^ move out of `acc0` occurs here
     |
help: consider cloning the value if the performance cost is acceptable
     |
3439 |     let r8: (i64, i64) = almide_rt_list_fold(almide_rt_list_fold(vec![almide_rt_map_get_or(&almide_rt_map_fold(&acc0.clone(), acc0.clone(), {
     |                                                                                                                     ++++++++

For more information about this error, try `rustc --explain E0505`.
error: could not compile `almide-generated` (bin "almide-generated") due to 1 previous error; 5 warnings emitted


